[package]
name = "tcp-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.39", features = ["net", "io-util", "rt-multi-thread", "macros", "signal", "time"] }
clap = { version = "4.5", features = ["derive"] }
humantime = "2.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[[bin]]
name = "tcp-proxy"
path = "src/main.rs"

[[bin]]
name = "echo-server"
path = "src/echo-server.rs"
