[package]
name = "tcp-proxy"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
tokio = { version = "1.39", features = ["net", "io-util", "rt-multi-thread", "macros", "signal", "time"] }
clap = { version = "4.5", features = ["derive"] }
humantime = "2.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[lints.rust]
unsafe_code = "forbid"
non_ascii_idents = "deny"
unreachable_pub = "deny"
trivial_casts = "deny"
unused_crate_dependencies = "deny"
